# iCub-sender

./: LICENSE  README.md
icub-sender/: CMakeLists.txt  main.cpp
